Updated panel width from 30% to 75% to stop email overflow

--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ input[type="text"] {
 .panel {
     background-color: var(--bg-secondary);
     margin-left: 1.6%;
-    width: 30%;
+    width: 75%;
     padding: 1.6%;
 }
 .panel h3 {
